<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Walkntrade</string>
    <string name="url_privacy">https://walkntrade.com/privacy</string>
    <string name="images_directory">android_images/</string>
    <string name="background_image_1">background_0.png</string>
    <string name="background_image_2">background_1.jpg</string>

    <!-- Universal strings, used anywhere in the app -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="no_connection">Network connection not found</string>
    <string name="retry">Retry</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="signin">Sign In</string>
    <string name="signout">Sign Out</string>
    <string name="no_results">No Results Found</string>
    <string name="swipe_down_refresh">Swipe down to refresh</string>
    <string name="in_progress">Coming Soon - In Progress</string>
    <string name="no_login">Must be logged in</string>
    <string name="login_failed">Could not login</string>
    <string name="drawer_icon">Navigation Drawer icon</string>
    <string name="user_name_no_login">Please Login</string>
    <string name="default_avatar_url">colorful/Anonymous_User.jpg</string>
    <string name="default_image_url">/colorful/tfe_no_thumb.png</string>
    <string name="confirm">Confirm</string>
    <string name="reply">Reply</string>
    <string name="done">Done!</string>
    <string name="messages">Messages</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="save_changes">Save Changes</string>
    <string name="error_occured">An error occurred</string>
    <string name="user_not_found">User not found</string>

    <!-- Actual Category id -->
    <string name="server_category_all">all</string>
    <string name="server_category_book">book</string>
    <string name="server_category_tech">tech</string>
    <string name="server_category_housing">housing</string>
    <string name="server_category_misc">misc</string>

    <!-- Category name -->
    <string name="category_name_all">Everything</string>
    <string name="category_name_book">Textbooks</string>
    <string name="category_name_housing">Housing</string>
    <string name="category_name_tech">Tech</string>
    <string name="category_name_misc">Miscellaneous</string>

    <string-array name="categories">
        <item>All</item>
        <item>Books</item>
        <item>Tech/Games</item>
        <item>Services</item>
        <item>Misc.</item>
    </string-array>

    <!-- Show Page Strings -->
    <string name="post_image">Image posted by user</string>
    <string name="email_optional">Email (Optional)</string>

    <!-- Extra: Help, Feedback, Privacy Policy, etc. -->
    <string name="privacy_and_feedback">Feedback &amp; Privacy Policy</string>
    <string name="privacy_and_feedback_short">Feedback &amp; Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="send_feedback">Send us Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_fail">Could not send feedback</string>
    <string name="feedback_thanks">Thank you!</string>
    
    <item name="holder" type="id"/>

    <!-- Auto-generated Strings **Remove All** -->
    <string name="invalid_message">Message cannot be blank</string>
    <string name="sending_message">Sending message&#8230;</string>
    <string name="no_messages">You don\'t have any messages!</string>
    <string name="removing_messages">Deleting conversation&#8230;</string>
    <string name="removing_messages_multiple">Deleting conversations&#8230;</string>
    <string name="title_activity_show_message">Walkntrade Message</string>
    <string name="title_activity_search">Searching</string>
    <string name="title_activity_message_conversation">MessageConversation</string>

</resources>
