<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/sign_in"
        appcompat:showAsAction="never"/>

    <item
        android:id="@+id/action_inbox"
        android:orderInCategory="200"
        android:icon="@drawable/ic_chat_white"
        android:title="@string/messages"
        appcompat:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="300"
        android:title="@string/privacy_and_feedback"
        android:titleCondensed="@string/privacy_and_feedback_short"/>

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="400"
        android:title="@string/signout" />

</menu>
